syntax = "proto3";

package todo;

option go_package = "./todoPB";

// protoc -I="." --go-grpc_out="." --go_out="." todo.proto


// Messages

message GetItemsRequest {
    string message = 1;
}

message Item {
    string id = 1;
    string title = 2;
    string description = 3;
    bool closed = 4;
}

message GetItemsResponse {
    repeated Item items = 1;
}

message GeneralResponse {
    string message = 1;
}

service TodoService {

    rpc GetItems(GetItemsRequest) returns (GetItemsResponse) {};

    rpc CreateItem(Item) returns (Item) {};    

    rpc CloseItem(Item) returns (GeneralResponse) {};

    rpc DeleteItem(Item) returns (GeneralResponse) {};
    
}